// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Create, update, and delete application data create an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: CreateTodoInput!) { createTodo(input: $input) { id content description done priority owner createdAt updatedAt } }",
      "variables": {
        "input": {
          "content": "My new todo",
          "done": true,
        },
      },
    },
    {},
  ],
]
`;

exports[`Create, update, and delete application data delete an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: DeleteTodoInput!) { deleteTodo(input: $input) { id content description done priority owner createdAt updatedAt } }",
      "variables": {
        "input": {
          "id": "123123213",
        },
      },
    },
    {},
  ],
]
`;

exports[`Create, update, and delete application data update an item 1`] = `
[
  [
    {
      "authMode": undefined,
      "authToken": undefined,
      "query": "mutation($input: UpdateTodoInput!) { updateTodo(input: $input) { id content description done priority owner createdAt updatedAt } }",
      "variables": {
        "input": {
          "description": "Updated description",
          "id": "some_id",
        },
      },
    },
    {},
  ],
]
`;
